@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.54 2003/04/03 17:22:52 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.55 2003/04/04 21:19:03 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -1717,7 +1717,7 @@ test_term()
     (*t->put_text)(x+xl*7, yl+t->v_char*1.5, "pattern fill");
     for (i=0; i<10; i++) {
 	int style = ((i<<4) + FS_PATTERN);
-	if (*t->fillbox)
+	if (t->fillbox)
 	    (*t->fillbox) ( style, x, y, xl, yl );
 	(*t->move)  (x,y);
 	(*t->vector)(x,y+yl);
